// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JIRA wiki markup - Misc :puppy: should not be an emoji clusterfuck 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": ":puppy:",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Misc [CS-480] this is not a list 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "-",
          "type": "text",
        },
        {
          "attrs": {
            "text": "
",
          },
          "type": "hardBreak",
        },
        {
          "text": "this is not a list",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Misc ESS-2440 should render consecutive emojis correctly 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "emoji prefix ",
          "type": "text",
        },
        {
          "attrs": {
            "id": "atlassian-check_mark",
            "shortName": ":check_mark:",
            "text": ":check_mark:",
          },
          "type": "emoji",
        },
        {
          "attrs": {
            "id": "atlassian-yellow_star",
            "shortName": ":yellow_star:",
            "text": ":yellow_star:",
          },
          "type": "emoji",
        },
        {
          "attrs": {
            "id": "atlassian-info",
            "shortName": ":info:",
            "text": ":info:",
          },
          "type": "emoji",
        },
        {
          "text": " emoji suffix",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Misc It should be possible to have a ruler as the final line of text 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "Hi",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "type": "rule",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Misc It should be possible to have a ruler as the only thing 1`] = `
{
  "content": [
    {
      "type": "rule",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Misc an emoji at the end of line should still be emoji 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "hello",
          "type": "text",
        },
        {
          "attrs": {
            "id": "1f642",
            "shortName": ":slight_smile:",
            "text": "🙂",
          },
          "type": "emoji",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Misc an emoji itself should work too 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "attrs": {
            "id": "1f642",
            "shortName": ":slight_smile:",
            "text": "🙂",
          },
          "type": "emoji",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Misc an emoji with characters after should not be an emoji 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": ":)hello",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Misc an emoji with characters before and after should not be an emoji 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "hello:)hello",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Misc an emoji with characters before and after with a whitespace should be an emoji 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "hello",
          "type": "text",
        },
        {
          "attrs": {
            "id": "1f642",
            "shortName": ":slight_smile:",
            "text": "🙂",
          },
          "type": "emoji",
        },
        {
          "text": " hello",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Misc an emoji with characters before should still be an emoji 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "hello",
          "type": "text",
        },
        {
          "attrs": {
            "id": "1f642",
            "shortName": ":slight_smile:",
            "text": "🙂",
          },
          "type": "emoji",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Misc should escape macros 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "this is a {panel} text, not a macro",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "panelColor": null,
        "panelIcon": null,
        "panelIconId": null,
        "panelIconText": null,
        "panelType": "info",
      },
      "content": [
        {
          "attrs": {
            "localId": null,
          },
          "type": "paragraph",
        },
      ],
      "type": "panel",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Misc should escape monospace text 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "this is a {{normal text}}, not a monospaced",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Misc should find emojis and mentions in text 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "this is a string with ",
          "type": "text",
        },
        {
          "attrs": {
            "id": "1f642",
            "shortName": ":slight_smile:",
            "text": "🙂",
          },
          "type": "emoji",
        },
        {
          "text": " emojis and ",
          "type": "text",
        },
        {
          "attrs": {
            "accessLevel": "",
            "id": "username",
            "localId": null,
            "text": "",
            "userType": null,
          },
          "type": "mention",
        },
        {
          "text": " mentions",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Misc should find emojis in text 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "this is a string with ",
          "type": "text",
        },
        {
          "attrs": {
            "id": "1f642",
            "shortName": ":slight_smile:",
            "text": "🙂",
          },
          "type": "emoji",
        },
        {
          "text": " emojis in it ",
          "type": "text",
        },
        {
          "attrs": {
            "id": "atlassian-yellow_star",
            "shortName": ":yellow_star:",
            "text": ":yellow_star:",
          },
          "type": "emoji",
        },
        {
          "text": " tada",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Misc should find emojis in text with marks 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "this is a string ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "type": "sub",
              },
              "type": "subsup",
            },
          ],
          "text": "with ",
          "type": "text",
        },
        {
          "attrs": {
            "id": "1f642",
            "shortName": ":slight_smile:",
            "text": "🙂",
          },
          "type": "emoji",
        },
        {
          "marks": [
            {
              "attrs": {
                "type": "sub",
              },
              "type": "subsup",
            },
          ],
          "text": " emojis",
          "type": "text",
        },
        {
          "text": " in it ",
          "type": "text",
        },
        {
          "attrs": {
            "id": "atlassian-yellow_star",
            "shortName": ":yellow_star:",
            "text": ":yellow_star:",
          },
          "type": "emoji",
        },
        {
          "text": " tada",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;
